fix:overflow-hidden

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24433,6 +24433,9 @@ body{
 .gap-y-2{
   row-gap: 0.5rem;
 }
+.gap-y-1{
+  row-gap: 0.25rem;
+}
 .space-x-1 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.25rem * var(--tw-space-x-reverse));
@@ -24513,6 +24516,12 @@ body{
 }
 .overflow-x-hidden{
   overflow-x: hidden;
+}
+.overflow-y-hidden{
+  overflow-y: hidden;
+}
+.\!overflow-y-hidden{
+  overflow-y: hidden !important;
 }
 .truncate{
   overflow: hidden;
@@ -26711,6 +26720,9 @@ body{
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+  .lg\:overflow-y-hidden{
+    overflow-y: hidden;
   }
   .lg\:px-6{
     padding-left: 1.5rem;
